# bitbar-mediawiki-watchlist

./: Cargo.toml  LICENSE  README.md  flake.nix
assets/: pre-commit.rs
src/: main.rs
