[package]
name = "bitbar-mediawiki-watchlist"
version = "0.2.5"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
bitbar = { version = "0.10", features = ["base64"] }
futures = "0.3"
itertools = "0.14"
maplit = "1"
mediawiki = "0.3"
mimalloc = "0.1.43"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
thiserror = "2"
url = "2"
xdg = "2"
