[package]
name = "bitbar-mediawiki-watchlist"
version = "0.2.11"
edition = "2024"
rust-version = "1.91" # nixpkgs stable

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
bitbar = { version = "0.10", features = ["base64"] }
futures = "0.3"
itertools = "0.14"
maplit = "1"
mediawiki = "0.5"
mimalloc = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "hickory-dns", "http2", "rustls-no-provider", "system-proxy", "zstd"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
thiserror = "2"
url = "2"
xdg = "3"
